# python-tools

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE_GUIDELINE.md  INVESTIGATION_REVIEW_PLANNING_PROTOTYPING.md  TESTING_GUIDELINE.md
docs/guidelines/: ARCHITECTURE_GUIDELINE.md  IMPLEMENTATION_GUIDELINE.md  PROJECT_DOCUMENTATION_GUIDELINE.md  TELEGRAM_BOT_GUIDELINE.md
docs/prompts/: create_audio_record.md  create_browser_automation.md  create_new_modular_app.md  create_telegram_bot.md  create_tools_api.md
docs/roles/: TELEGRAM_ENGINEER.md  TOOL_ENGINEER.md  UI_UX_DESIGNER.md
docs/roles/profiles/: python_telegram_engineer.json  python_tool_engineer.json  python_tool_technical_lead.json  python_tool_testing_engineer.json  python_tool_ui_ux_designer.json
src/: meeting-record.py
src/api-server/: README.md  api-server.py
src/api-server/docs/: DEVELOPMENT_GUIDELINE.md  IMPLEMENTATION_PLAN.md
src/api-server/tests/: test_api_server.py
src/audio-record/: README.md  audio-record.py
src/audio-record/audio_record/: __init__.py  main.py
src/audio-record/docs/: DEVELOPMENT_GUIDELINE.md  IMPLEMENTATION_PLAN.md
src/audio-transcribe/: README.md  audio-transcribe.py  task.md
src/browser-automation/: README.md  browser-automation.py
src/meeting-record/: README.md  meeting-split.py
src/schedule-manager/: README.md  project.code-workspace
src/telegram-bot/: README.md  telegram-bot.py
src/voice-generator/: README.md  voice-generator.py
src/voice-note/: README.md  voice-note.py
voice_generator/: __init__.py
voice_note/: __init__.py
(+235 files in other folders)
