[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "rich>=15.0.0",
  "textual[syntax]>=8.2.7",
  "textual-dev>=1.8.0",
  "aiogram>=3.29.0",
  "fastapi>=0.138.1",
  "uvicorn>=0.49.0",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.2",
  "httpx>=0.28.1",
  "onnx>=1.22.0",
  "pytest-playwright>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
voice-note = "voice_note.main:main"

[tool.hatch.build.targets.wheel]
packages = ["voice_note"]

[tool.uv]
package = true
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
